SERVER-78632 Exception in QuerySettingsManager lock acquisition triggers server crash